==> META-MCU/st7735s-tft-0.96inch/code/HC32L13X/LCD_ST7735S.c <==
#include "hc32l13x.h"
#include "gpio.h"
#include "LCD_ST7735S.h"
#include "font.h"
#include "hz_16x16.h"
#include "hz_32x32.h"
#define LCD_PORT GpioPortB
#define LCD_PIN_SCK GpioPin11
#define LCD_PIN_SDA GpioPin12
#define LCD_PIN_RES GpioPin13
#define LCD_PIN_A0 GpioPin14
#define LCD_PIN_CS GpioPin15

void lcdGpioInit(void)
{
	stc_gpio_cfg_t stcGpioCfg; //定义GPIO配置结构体stcGpioCfg
	
    Sysctrl_SetPeripheralGate(SysctrlPeripheralGpio, TRUE); //打开GPIO外设时钟门控
	
	stcGpioCfg.enDir = GpioDirOut; //端口方向配置：输出
    stcGpioCfg.enPu = GpioPuEnable; //端口上下拉配置：开启上拉开关
    stcGpioCfg.enPd = GpioPdDisable; //端口输出模式配置：关闭下拉开关
	stcGpioCfg.enOD = GpioOdDisable; //GPIO开漏输出关闭
	
	Gpio_Init(LCD_PORT, LCD_PIN_SCK, &stcGpioCfg);
	Gpio_Init(LCD_PORT, LCD_PIN_SDA, &stcGpioCfg);
	Gpio_Init(LCD_PORT, LCD_PIN_RES, &stcGpioCfg);
	Gpio_Init(LCD_PORT, LCD_PIN_A0, &stcGpioCfg);
	Gpio_Init(LCD_PORT, LCD_PIN_CS, &stcGpioCfg);
}

void lcdSelectRegister(unsigned char data)
{
    CLR_LCD_A0;
    CLR_LCD_CS;
 
    for(int i = 0; i < 8; i++)
    {
        if(data & 0x80)
        {
            SET_LCD_SDA;
        }
        else 
        {
            CLR_LCD_SDA;
        }
        CLR_LCD_SCK;
        SET_LCD_SCK;
        data = data << 1;
    }	 
    SET_LCD_CS;
}

void lcdWriteDataU8(unsigned char data)
{
    SET_LCD_A0;
    CLR_LCD_CS;

    for(int i = 0; i < 8; i++)
    {
        if( data & 0x80 )
        {
            SET_LCD_SDA;
        }
        else 
        {
            CLR_LCD_SDA;
        }
        CLR_LCD_SCK;
        SET_LCD_SCK;
        data = data << 1;
    }
    SET_LCD_CS;
}
